# VulkanCourseEngine

./: CMakeLists.txt
cmake/: Shaders.cmake
src/CPP/: glfw_initialization.cpp  glfw_monitor.cpp  glfw_window.cpp  graphics.cpp  main.cpp  utilities.cpp
src/Headers/: buffer_handle.h  glfw_initialization.h  glfw_monitor.h  glfw_window.h  graphics.h  precomp.h  uniform_transformations.h  utilities.h  vertex.h
src/Shaders/: basic.frag  basic.vert
